# Eva

./: .gitignore  Cargo.toml  README.md  SCRIPTING.md  build.sh  debug.sh  run.sh
about/: eva.typ  manual.typ
client/: index.html
eva/: Cargo.toml
eva-macros/: Cargo.toml
eva-macros/src/: lib.rs
eva-py/: Cargo.toml  pyproject.toml
eva-py-macros/: Cargo.toml
eva-py-macros/src/: lib.rs
eva-py/python/eva_py/: __init__.py  box.py  camera.py  eva_math.py  geometry_node.py  light.py  main.py  material.py  mesh.py  node.py  render.py  scene.py  sphere.py  texture_builder.py  utils.py
eva-py/src/: eva_camera.rs  eva_global.rs  eva_light.rs  eva_main.rs  eva_material.rs  eva_scene.rs  lib.rs  py_geometry.rs  py_light.rs  py_material.rs  py_mesh.rs  py_scene.rs  utils.rs
eva-wasm/: Cargo.toml
eva-wasm/src/: balls.rs  lib.rs
eva/assets/shaders/: ray_tracer.wgsl
eva/shaders/: display.wgsl  ray_tracer.wgsl
eva/src/: asset_loader.rs  config.rs  lib.rs  obj_loader.rs  obj_mesh.rs  run.rs  runner.rs  screenshot.rs  texture_loader.rs  utils.rs
eva/src/ray_tracer/: camera.rs  mod.rs
eva/src/renderer/: dynamic_render_context.rs  mod.rs  renderer.rs  renderer_builder.rs  renderer_context.rs  s_camera.rs  static_render_context.rs
eva/src/scene/: camera.rs  flat_scene.rs  material.rs  mesh.rs  mod.rs  node.rs  pbr_material.rs  scene.rs  transform.rs
eva/src/scene/primitives/: cube.rs  mesh.rs  mod.rs  primitive.rs  sphere.rs  triangle.rs
eva/src/shader/: mod.rs  shader_bool.rs  shader_buffer.rs  shader_camera.rs  shader_cube.rs  shader_global_config.rs  shader_mesh.rs  shader_point_light.rs  shader_skybox.rs  shader_sphere.rs  shader_struct.rs  shader_texture.rs  shader_textures.rs  shader_transform.rs  shader_utils.rs
fire-rs/: Cargo.toml
fire-rs/assets/shaders/: display.wgsl  ray_tracer.wgsl  shader.wgsl
fire-rs/src/: lib.rs  renderer.rs
fire-rs/src/renderer/: mod.rs  renderer.rs  renderer_builder.rs  s_camera.rs
scripts/: ball.py  cornell.py  cube.py  debug.py  instance-og.py  macho_cows.py  nonhier.py  pong.py  reflections.py  sample.py  shared.py  show.py  simple_cows.py  ss.py
scripts/flappy-bird/: background.py  bird.py  flappy-bird.py  pipe.py  wall.py
wall-e/: Cargo.toml  debug.sh  run.sh
wall-e-py/src/: lib.rs  py_camera.rs  py_geometry.rs  py_mesh.rs  py_transform.rs
wall-e/scripts/: macho_cows.py
wall-e/src/: lib.rs  obj_mesh.rs
wall-e/src/output/: mod.rs  png.rs
wall-e/src/ray_tracer/: background.rs  intersection.rs  shader.rs
wall-e/src/scene/: material.rs  mod.rs  node.rs  transform.rs
wall-e/src/scene/primitives/: mod.rs  sphere.rs
wall-e/wall-e/: Cargo.toml
wall-e/wall-e-py/: Cargo.toml  pyproject.toml
wall-e/wall-e-py-macros/: Cargo.toml
wall-e/wall-e-py/.env/: pyvenv.cfg
wall-e/wall-e-py/src/: py_light.rs
wall-e/wall-e/src/: config.rs  utils.rs
wall-e/wall-e/src/output/: buffer.rs
wall-e/wall-e/src/ray_tracer/: camera.rs  mod.rs  ray.rs  ray_tracer.rs
wall-e/wall-e/src/scene/: collidable.rs  flat_scene.rs  mesh.rs  scene.rs
wall-e/wall-e/src/scene/primitives/: cube.rs  triangle.rs
