[package]
name = "eva-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
eva = { path = "../eva" }
nalgebra = "0.32.3"
pollster = "0.3.0"
winit = { version = "0.28.0"}
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.34"}

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

