[package]
name = "eva"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "./bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.20"
winit = { version = "0.28.0"}
wgpu = { version = "0.17"}
env_logger = "0.10.1"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
image = { version = "0.24.7", features = ["png", "jpeg"] }
wall-e = { path = "../../wall-e/wall-e" }
nalgebra = "0.32.3"
# Ensure data is layed out correctly when sending it to a shader.
encase = { version = "0.6.1", features = ["nalgebra"]}
obj = "0.10.2"
lazy_static = "1.4.0"
