[package]
name = "eva"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.20"
winit = { version = "0.28.0"}
wgpu = { version = "0.17"}
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
image = { version = "0.24.7", features = ["png", "jpeg"] }
nalgebra = "0.32.3"
# Ensure data is layed out correctly when sending it to a shader.
encase = { version = "0.6.1", features = ["nalgebra"]}
obj = "0.10.2"
lazy_static = "1.4.0"
eva-macros = { path = "../eva-macros" }
half = "2.3.1"
rand = "0.8.5"
